--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
     "name": "네이버 카페 트위치 클립 익스텐션(NCTC Extension)",
     "description": "네이버 카페에서 트위치 클립 링크를 비디오로 볼 수 있습니다.",
     "homepage_url": "https://github.com/getCurrentThread/Naver-Cafe-Twitch-Clip-Extension",
-    "version": "0.1.1.0",
+    "version": "0.1.1.1",
     "author": "getCurrentThread",
     "action": {
       "default_icon": "images/thumbnail.png",
@@ -44,9 +44,22 @@
           "lib/jquery-3.6.0.min.js",
           "lib/arrive.min.js",
           "utils.js",
-          "content_script.js"
+          "top.js"
         ],
         "run_at": "document_idle"
+      },
+      {
+        "matches": [
+          "https://cafe.naver.com/MyCafeIntro.nhn*"
+        ],
+        "all_frames": true,
+        "css": [],
+        "js": [
+          "lib/jquery-3.6.0.min.js",
+          "lib/arrive.min.js",
+          "utils.js",
+          "main.js"
+        ]
       },
       {
         "matches": [
@@ -58,7 +71,7 @@
           "lib/jquery-3.6.0.min.js",
           "lib/arrive.min.js",
           "utils.js",
-          "embed_twitch.js"
+          "embed.js"
         ]
       }
     ]
