Feat 트위치 스타일로 재생 기능 추가 및 다음 클립으로 자동재생 기능 임의 삭제

--- a/manifest.json
+++ b/manifest.json
@@ -37,7 +37,7 @@
     "content_scripts": [
       {
         "matches": [
-          "https://cafe.naver.com/*"
+          "*://cafe.naver.com/*"
         ],
         "css": ["top.css"],
         "js": [
@@ -50,8 +50,7 @@
       },
       {
         "matches": [
-          "https://cafe.naver.com/MyCafeIntro.nhn*",
-          "https://cafe.naver.com/ArticleRead.nhn*"
+          "*://cafe.naver.com/*"
         ],
         "all_frames": true,
         "css": ["main.css"],
