--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
     "name": "네이버 카페 트위치 클립 익스텐션(NCTC Extension)",
     "description": "네이버 카페에서 트위치 클립 링크를 비디오로 볼 수 있습니다.",
     "homepage_url": "https://github.com/getCurrentThread/Naver-Cafe-Twitch-Clip-Extension",
-    "version": "0.1.0.0",
+    "version": "0.1.1.3",
     "author": "getCurrentThread",
     "action": {
       "default_icon": "images/thumbnail.png",
@@ -29,26 +29,50 @@
           "utils.js",
           "popup.html",
           "popup.js",
-          "welcome.html",
-          "welcome.js"
+          "settings.html",
+          "settings.js"
         ]
       }
     ],
     "content_scripts": [
       {
         "matches": [
-          "https://cafe.naver.com/*"
+          "*://cafe.naver.com/*"
         ],
-        "css": [
-          "inject.css"
-        ],
+        "css": ["top.css"],
         "js": [
           "lib/jquery-3.6.0.min.js",
           "lib/arrive.min.js",
           "utils.js",
-          "content_script.js"
+          "top.js"
         ],
         "run_at": "document_idle"
+      },
+      {
+        "matches": [
+          "*://cafe.naver.com/*"
+        ],
+        "all_frames": true,
+        "css": ["main.css"],
+        "js": [
+          "lib/jquery-3.6.0.min.js",
+          "lib/arrive.min.js",
+          "utils.js",
+          "main.js"
+        ]
+      },
+      {
+        "matches": [
+          "https://clips.twitch.tv/embed*"
+        ],
+        "all_frames": true,
+        "css": ["embed.css"],
+        "js": [
+          "lib/jquery-3.6.0.min.js",
+          "lib/arrive.min.js",
+          "utils.js",
+          "embed.js"
+        ]
       }
     ]
   }
