--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
     "name": "네이버 카페 트위치 클립 익스텐션(NCTC Extension)",
     "description": "네이버 카페에서 트위치 클립 링크를 비디오로 볼 수 있습니다.",
     "homepage_url": "https://github.com/getCurrentThread/Naver-Cafe-Twitch-Clip-Extension",
-    "version": "0.1.1.3",
+    "version": "0.1.1.4",
     "author": "getCurrentThread",
     "action": {
       "default_icon": "images/thumbnail.png",
@@ -30,7 +30,10 @@
           "popup.html",
           "popup.js",
           "settings.html",
-          "settings.js"
+          "settings.js",
+          "top.css",
+          "main.css",
+          "embed.css"
         ]
       }
     ],
@@ -39,7 +42,7 @@
         "matches": [
           "*://cafe.naver.com/*"
         ],
-        "css": ["top.css"],
+        "css": [],
         "js": [
           "lib/jquery-3.6.0.min.js",
           "lib/arrive.min.js",
@@ -53,7 +56,7 @@
           "*://cafe.naver.com/*"
         ],
         "all_frames": true,
-        "css": ["main.css"],
+        "css": [],
         "js": [
           "lib/jquery-3.6.0.min.js",
           "lib/arrive.min.js",
@@ -66,7 +69,7 @@
           "https://clips.twitch.tv/embed*"
         ],
         "all_frames": true,
-        "css": ["embed.css"],
+        "css": [],
         "js": [
           "lib/jquery-3.6.0.min.js",
           "lib/arrive.min.js",
